--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,8 +9,9 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (21/07/21)
+      Last updated (23/07/21)
     </h2>
+    <p> My tasks & Available tasks, 'Date' replaced by 'Task created'<br>Which is ordered by priority not shown for Judicial users </p>
     <p> Updated H1s in identified sections </p>
     <div style="display: flex; margin-top: 80px;">
 
