--- a/app/views/workallocation/pages/wa-available-tasks-wfb.html
+++ b/app/views/workallocation/pages/wa-available-tasks-wfb.html
@@ -26,7 +26,7 @@ My work
     <div class="govuk-grid-column-one-half" style="background-color: #f3f2f1; padding-top: 20px; margin-left: 15px;">
 
     <h2 class="govuk-heading-m">Immigration and Asylum</h2>
-  
+
     <p class="govuk-body">Show tasks and cases for the selected locations:</p>
   <!--    <div class="govuk-checkboxes govuk-checkboxes--small">
         <div class="govuk-checkboxes__item">
@@ -160,7 +160,7 @@ My work
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 25px;" aria-sort="none"></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task created</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 100px;" aria-sort="none"></th>
         </tr>
       </thead>
@@ -173,10 +173,10 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">	Review appellant case</td>
-          <td class="govuk-table__cell">{{govukTag({
+          <td class="govuk-table__cell"><!--{{govukTag({
           text: now | date( 'subtract', 6, 'days' ) | date,
           classes: "govuk-tag--red"
-        })}} </td>
+        })}} -->{{ now |  date("subtract", 6, "day") | date( "D MMMM YYYY" ) }}</td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
@@ -189,10 +189,10 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-          <td class="govuk-table__cell">{{govukTag({
+          <td class="govuk-table__cell"><!--{{govukTag({
           text: now | date( 'add', 0, 'days' ) | date,
           classes: "govuk-tag--yellow"
-        })}} </td>
+        })}} -->{{ now |  date("subtract", 2, "day") | date( "D MMMM YYYY" ) }}</td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
@@ -204,10 +204,10 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-          <td class="govuk-table__cell">{{govukTag({
+          <td class="govuk-table__cell"><!-- {{govukTag({
           text: now | date( 'add', 2, 'days' ) | date,
           classes: "govuk-tag--grey"
-        })}} </td>
+        })}} -->{{ now |  date("subtract",4, "day") | date( "D MMMM YYYY" ) }}</td>
           <!--  <td class="govuk-table__cell">N/A</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
@@ -218,10 +218,10 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-          <td class="govuk-table__cell">{{govukTag({
-          text: now | date( 'add', 3, 'days' ) | date,
+          <td class="govuk-table__cell"><!-- {{govukTag({
+          text: now | date( 'add', 2, 'days' ) | date,
           classes: "govuk-tag--grey"
-        })}} </td>
+        })}} -->{{ now |  date("subtract",4, "day") | date( "D MMMM YYYY" ) }} </td>
           <!--  <td class="govuk-table__cell">N/A</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
