--- a/app/views/workallocation/pages/reassign-tb.html
+++ b/app/views/workallocation/pages/reassign-tb.html
@@ -36,7 +36,7 @@ My work
               <th scope="col" class="govuk-table__header" aria-sort="none">Case category</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Location</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Task</th>
-              <th scope="col" class="govuk-table__header" aria-sort="none">Date</th>
+              <th scope="col" class="govuk-table__header" aria-sort="none">Task created</th>
               <th scope="col" class="govuk-table__header" aria-sort="none">Person</th>
               <th scope="col" class="govuk-table__header" aria-sort="none"></th>
             </tr>
@@ -48,10 +48,7 @@ My work
               <td data-label="Reference">Protection</td>
               <td data-label="Status">Taylor House</td>
               <td data-label="Date">Generate decision and reasons</td>
-                <td data-label="Amount">{{govukTag({
-                text: now | date( 'add', 12, 'days' ) | date,
-                classes: "govuk-tag--grey"
-              })}} </td>
+                <td data-label="Amount">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
         <td data-label="Status">Judge Barringthorn-Wardley</td>
           <td data-label="Status"><a href="reassign-t">Change</a></td>
             </tr>
