--- a/app/views/workallocation/pages/wa-allwork-none.html
+++ b/app/views/workallocation/pages/wa-allwork-none.html
@@ -111,7 +111,7 @@ My work
     </div>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
+<!--
     <label class="govuk-heading-m" for="sort">
       Priority
     </label>
@@ -121,10 +121,11 @@ My work
       <option value="views">Due (yellow)</option>
       <option value="comments">New (grey)</option>
     </select>
-
+-->
   </div>
+  <!--
   <div class="govuk-!-padding-bottom-1"></div>
-
+-->
               <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                 Apply
               </button>
@@ -144,7 +145,7 @@ My work
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
                 <th scope="col" class="govuk-table__header"></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task created</button></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto; color: #005ea5;" aria-sort="none">Person</th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"></th>
               </tr>
@@ -160,10 +161,7 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-                <td class="govuk-table__cell">{{govukTag({
-                text: now | date( 'subtract', 0, 'days' ) | date,
-                classes: "govuk-tag--yellow"
-              })}}</td>
+                <td class="govuk-table__cell">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }} </td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="wa-allwork-none-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
@@ -174,10 +172,7 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review application case</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
-                text: now | date( 'add', 5, 'days' ) | date,
-                classes: "govuk-tag--grey"
-              })}}</td>
+                <td class="govuk-table__cell">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }} </td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
