--- a/app/views/workallocation/pages/wa-allwork-sp-mad.html
+++ b/app/views/workallocation/pages/wa-allwork-sp-mad.html
@@ -122,18 +122,21 @@ My work
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-    <label class="govuk-heading-m" for="sort">
-      Priority
-    </label>
-    <select class="govuk-select" id="sort" name="sort" style="width:100%">
-      <option value="updated" selected>All</option>
-      <option value="views">Urgent (red)</option>
-      <option value="views">Due (yellow)</option>
-      <option value="comments">New (grey)</option>
-    </select>
-
-  </div>
-  <div class="govuk-!-padding-bottom-1"></div>
+    <!--
+        <label class="govuk-heading-m" for="sort">
+          Priority
+        </label>
+        <select class="govuk-select" id="sort" name="sort" style="width:100%">
+          <option value="updated" selected>All</option>
+          <option value="views">Urgent (red)</option>
+          <option value="views">Due (yellow)</option>
+          <option value="comments">New (grey)</option>
+        </select>
+    -->
+      </div>
+      <!--
+      <div class="govuk-!-padding-bottom-1"></div>
+    -->
 
               <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
                 Apply
@@ -154,56 +157,48 @@ My work
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
                 <th scope="col" class="govuk-table__header"></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task created</button></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto; color: #005ea5;" aria-sort="none">Person</th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"></th>
               </tr>
             </thead>
             <tbody class="govuk-table__body">
 
-              <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Libby Mcmahon</a></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Generate decision and reasons</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
-                text: now | date( 'subtract', 3, 'days' ) | date,
-                classes: "govuk-tag--red"
-              })}}</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
-                <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-              </tr>
+
+                            <tr class="govuk-table__row">
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Libby Mcmahon</a></td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Generate decision and reasons</a></td>
+                              <td class="govuk-table__cell"> {{ now |  date("subtract", 3, "day") | date( "D MMMM YYYY" ) }}</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
+                              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                            </tr>
 
 
 
-              <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Talha Awan</a></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review FTPA application</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
-                text: now | date( 'subtract', 0, 'days' ) | date,
-                classes: "govuk-tag--yellow"
-              })}}</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
-                <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-              </tr>
+                            <tr class="govuk-table__row">
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Talha Awan</a></td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review FTPA application</a></td>
+                              <td class="govuk-table__cell"> {{ now |  date("subtract", 2, "day") | date( "D MMMM YYYY" ) }}</td>
+                                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
+                              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                            </tr>
 
-              <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review application decision</a></td>
-                <td class="govuk-table__cell">{{govukTag({
-                text: now | date( 'subtract', 0, 'days' ) | date,
-                classes: "govuk-tag--yellow"
-              })}}</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
-                <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-              </tr>
+                            <tr class="govuk-table__row">
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review application decision</a></td>
+                              <td class="govuk-table__cell"> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}  </td>
+                                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
+                              <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                            </tr>
 <!--
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
