--- a/app/views/workallocation/pages/wa-available-tasks-c.html
+++ b/app/views/workallocation/pages/wa-available-tasks-c.html
@@ -52,7 +52,7 @@ My work
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 25px;" aria-sort="none"></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task created</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 100px;" aria-sort="none"></th>
         </tr>
       </thead>
@@ -64,10 +64,10 @@ My work
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Allocate a hearing judge</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--red"
-})}} </td>
+          <td class="govuk-table__cell"> <!--{{govukTag({
+          text: now | date( 'subtract', 2, 'days' ) | date,
+          classes: "govuk-tag--red"
+        })}} --> {{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }} </td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
@@ -78,10 +78,10 @@ classes: "govuk-tag--red"
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--yellow"
-})}} </td>
+          <td class="govuk-table__cell"><!--{{govukTag({
+          text: now | date( 'add', 0, 'days' ) | date,
+          classes: "govuk-tag--yellow"
+        })}} --> {{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }} </td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
@@ -97,10 +97,10 @@ classes: "govuk-tag--yellow"
                     C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
             </svg></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--yellow"
-})}} </td>
+          <td class="govuk-table__cell"><!--{{govukTag({
+          text: now | date( 'add', 0, 'days' ) | date,
+          classes: "govuk-tag--yellow"
+        })}} --> {{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }} </td>
           <!--  <td class="govuk-table__cell">N/A</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
@@ -111,14 +111,14 @@ classes: "govuk-tag--yellow"
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
+          <td class="govuk-table__cell"><!--{{govukTag({
+          text: now | date( 'add', 6, 'days' ) | date,
+          classes: "govuk-tag--grey"
+        })}} -->{{ now |  date("subtract", 6, "day") | date( "D MMMM YYYY" ) }} </td>
           <!--  <td class="govuk-table__cell">N/A</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
-        
+
 
 
       </tbody>
